force-app/main/default/objects/Scorecard__c/fields/Culture_Fit__c.field-meta.xml
<CustomField>
    <fullName>Culture_Fit__c</fullName>
    <label>Culture Fit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>