force-app/main/default/objects/Scorecard__c/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scorecards</relationshipName>
    <type>Lookup</type>
</CustomField>