force-app/main/default/objects/Scorecard__c/fields/Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating__c</fullName>
    <label>Overall Rating</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>1 - Strong No</fullName><default>false</default><label>1 - Strong No</label></value>
            <value><fullName>2 - No</fullName><default>false</default><label>2 - No</label></value>
            <value><fullName>3 - Neutral</fullName><default>false</default><label>3 - Neutral</label></value>
            <value><fullName>4 - Yes</fullName><default>false</default><label>4 - Yes</label></value>
            <value><fullName>5 - Strong Yes</fullName><default>false</default><label>5 - Strong Yes</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>