force-app/main/default/objects/Scorecard__c/fields/Problem_Solving__c.field-meta.xml
<CustomField>
    <fullName>Problem_Solving__c</fullName>
    <label>Problem Solving</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>