force-app/main/default/objects/Scorecard__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Advance</fullName><default>false</default><label>Advance</label></value>
            <value><fullName>Hold</fullName><default>false</default><label>Hold</label></value>
            <value><fullName>Reject</fullName><default>false</default><label>Reject</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>